# nebula

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  TASKS.md  THIRD-PARTY-NOTICES
.github/workflows/: linux-lua.yml
docs/: lua-configuration.md  math-rendering-test.md
docs/release-notes/: v0.5.0.md  v0.6.0.md  v0.7.0.md
licenses/: LICENSE-LUA
nebula-completions/: Cargo.toml
nebula_app/: Cargo.toml
nebula_app/res/: image.f.glsl  math.f.glsl  math.v.glsl  ui.f.glsl
nebula_app/src/: ai_hook.rs  atomic_file.rs  cli.rs  clipboard.rs  config_cli.rs  directory_history.rs  event.rs  file_uri.rs  font_install.rs  main.rs  message_bar.rs  motion.rs  nebula_history.rs  process_tree.rs  scheduler.rs  session.rs  shell_detect.rs  ssh.rs  ssh_credentials.rs  ssh_profiles.rs  ssh_session.rs  ssh_sftp.rs  update_check.rs  ux.rs  window_context.rs
nebula_app/src/config/: bindings.rs  color.rs  cursor.rs  font.rs  mod.rs  monitor.rs  reload.rs  source.rs  template.rs  ui_config.rs
nebula_app/src/display/: chrome.rs  command_palette.rs  content.rs  context_menu.rs  cursor.rs  damage.rs  design_tokens.rs  (+21 more)
nebula_config/: Cargo.toml
nebula_config/src/: lib.rs
nebula_config_derive/: Cargo.toml
nebula_config_derive/tests/: config.rs
nebula_hook/: Cargo.toml
nebula_hook/src/: main.rs
nebula_terminal/: Cargo.toml
nebula_terminal/src/: event.rs  event_loop.rs  osc_cwd.rs
nebula_terminal/tests/: ref.rs
scripts/: build-installer.ps1  installer.iss  package-release.ps1  ui_probe.ps1
scripts/tests/: installer.tests.ps1  package-release.tests.ps1
(+54 files in other folders)
